# RedisVLClassifierRouter

./: .gitignore  1_baseline_with_openai.py  2_RedisVLRouter.py  3_RedisVLRouterwithChatGPT.py  4_RedisVLRouterWithOptimizer.py  BBC News Train2.csv  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  PUBLISH_CHECKLIST.md  README.md  README_OPTIMIZER.md  SETUP.md  batch_input_gpt_3.5_turbo.jsonl  batch_input_gpt_4.jsonl  batch_input_gpt_4_turbo.jsonl  config.example.py  main.py  pyproject.toml  quickstart.sh  test_distance_threshold.py
.github/workflows/: ci.yml
