[project]
name = "redisvlclassifierrouter"
version = "0.1.0"
description = "Text classification using RedisVL SemanticRouter with automatic threshold optimization"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Redis Team" }
]
license = { text = "MIT" }
keywords = ["redis", "vector-search", "classification", "nlp", "semantic-router", "redisvl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "openai>=2.7.1",
    "redisvl>=0.10.0",
    "sentence-transformers>=5.1.2",
    "redis-retrieval-optimizer>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/RedisVLClassifierRouter"
Documentation = "https://github.com/yourusername/RedisVLClassifierRouter#readme"
Repository = "https://github.com/yourusername/RedisVLClassifierRouter"
Issues = "https://github.com/yourusername/RedisVLClassifierRouter/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
